fix bottompop alignment/size

--- a/src/index.css
+++ b/src/index.css
@@ -39,15 +39,15 @@
 }
 
 .media-avatar-popout {
-  @apply inline-block h-4 w-4 rounded-full border-black border-double hover:scale-125 ease-in duration-100;
+  @apply inline-block min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] rounded-full border-black border-double hover:scale-125 ease-in duration-100;
 }
 
 .add-to-watch-popout {
-  @apply inline-block h-4 w-4 rounded-full border-black text-emerald-500 border-double hover:scale-125 ease-in duration-100;
+  @apply inline-block min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] rounded-full border-black text-emerald-500 border-double hover:scale-125 ease-in duration-100;
 }
 
 .remove-from-watch-popout {
-  @apply inline-block h-4 w-4 rounded-full border-black text-rose-500 border-double hover:scale-125 ease-in duration-100;
+  @apply inline-block min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] rounded-full border-black text-rose-500 border-double hover:scale-125 ease-in duration-100;
 }
 
 .rating-face-popout {
@@ -59,11 +59,11 @@
 }
 
 .like-btn-sml {
-  @apply text-slate-400 hover:text-slate-500 cursor-pointer;
+  @apply min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] text-slate-400 hover:text-slate-500 cursor-pointer;
 }
 
 .like-btn-sml-clicked {
-  @apply text-green-500 cursor-pointer;
+  @apply min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] text-green-500 cursor-pointer;
 }
 
 .like-btn-clicked {
@@ -75,11 +75,11 @@
 }
 
 .meh-btn-sml {
-  @apply text-slate-400 hover:text-slate-500 cursor-pointer;
+  @apply min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] text-slate-400 hover:text-slate-500 cursor-pointer;
 }
 
 .meh-btn-sml-clicked {
-  @apply text-amber-500 cursor-pointer;
+  @apply min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] text-amber-500 cursor-pointer;
 }
 
 .meh-btn-clicked {
@@ -95,10 +95,10 @@
 }
 
 .dislike-btn-sml {
-  @apply text-slate-400 hover:text-slate-500 cursor-pointer;
+  @apply min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] text-slate-400 hover:text-slate-500 cursor-pointer;
 }
 
 .dislike-btn-sml-clicked {
-  @apply text-slate-400 text-red-500 cursor-pointer;
+  @apply min-w-[18px] min-h-[18px] max-w-[18px] max-h-[18px] text-slate-400 text-red-500 cursor-pointer;
 }
 
